VERSION: v1.1.5

NEW
• Py file for development stuff

IMPROVED

FIXED
• CRUD Base update fixed