@@ -103,7 +103,24 @@ async def add_user(
             return await crud.team.add_user(db=db, team=team, user=user)
         raise HTTPException(status_code=404, detail="User not found")
     raise HTTPException(status_code=404, detail="Team not found")
-    
+
+
+@router.post("/{id}/remove_user", response_model=schemas.TeamOutFull)
+async def remove_user(
+    *,
+    id: uuid.UUID,
+    db: Session = Depends(deps.get_db),
+    current_user: models.User = Depends(deps.get_current_user),
+    user: UserIn
+) -> Any:
+    """
+    Create new team.
+    """
+    if (team := await crud.team.get(db=db, id=id)):
+        if (user := await crud.user.get(db=db, id=user.user_id)):
+            return await crud.team.remove_user(db=db, team=team, user=user)
+        raise HTTPException(status_code=404, detail="User not found")
+    raise HTTPException(status_code=404, detail="Team not found")
 
 @router.put("/{id}", response_model=schemas.TeamOutFull)
 async def update_team(
