@@ -34,3 +34,4 @@ class Team(TeamBase):
 class TeamOut(Team):
     logotype_link: Optional[str]
     users: Optional[List[UserOut]]
+    creator_id: Optional[str]
